NetBSD Problem Report #48533

From ryo_on@yk.rim.or.jp  Mon Jan 20 08:56:30 2014
Return-Path: <ryo_on@yk.rim.or.jp>
Received: from mail.netbsd.org (mail.netbsd.org [149.20.53.66])
	(using TLSv1 with cipher DHE-RSA-AES256-SHA (256/256 bits))
	(Client CN "mail.NetBSD.org", Issuer "Postmaster NetBSD.org" (not verified))
	by mollari.NetBSD.org (Postfix) with ESMTPS id E1E36A647A
	for <gnats-bugs@gnats.NetBSD.org>; Mon, 20 Jan 2014 08:56:30 +0000 (UTC)
Message-Id: <20140120085626.E51846FFB8@mail.SiriusCloud.jp>
Date: Mon, 20 Jan 2014 17:56:26 +0900 (JST)
From: ryoon@NetBSD.org
Reply-To: ryoon@NetBSD.org
To: gnats-bugs@gnats.NetBSD.org
Subject: USB vendor ID 0x0572 is for Conexant, not for Xyratex
X-Send-Pr-Version: 3.95

>Number:         48533
>Category:       kern
>Synopsis:       USB vendor ID 0x0572 is for Conexant, not for Xyratex
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    ryoon
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Mon Jan 20 09:00:00 +0000 2014
>Closed-Date:    Sun May 25 06:20:55 +0000 2014
>Last-Modified:  Tue May 27 13:45:01 +0000 2014
>Originator:     Ryo ONODERA
>Release:        NetBSD 6.99.29
>Organization:

>Environment:


System: NetBSD tellurium.elements.tetera.org 6.99.29 NetBSD 6.99.29 (DTRACE2) #4: Sat Jan 18 15:03:07 JST 2014 ryo_on@tellurium.elements.tetera.org:/usr/obj/amd64/sys/arch/amd64/compile/DTRACE2 amd64
Architecture: x86_64
Machine: amd64
>Description:
USB vendor ID 0x0572 is Conexant Systems, Inc. formerly Rockwell
Semiconductor Systems.
My conexant modem say so, and FreeBSD and Linux has such values.

See:
http://svnweb.freebsd.org/base/head/sys/dev/usb/usbdevs?revision=260219&view=markup
http://www.linux-usb.org/usb.ids

>How-To-Repeat:

>Fix:

Index: usbdevs
===================================================================
RCS file: /cvsroot/src/sys/dev/usb/usbdevs,v
retrieving revision 1.663
diff -u -r1.663 usbdevs
--- usbdevs	13 Jan 2014 08:23:58 -0000	1.663
+++ usbdevs	20 Jan 2014 08:54:40 -0000
@@ -180,11 +180,12 @@
 vendor TELEX		0x0562	Telex Communications
 vendor PERACOM		0x0565	Peracom Networks
 vendor ALCOR2		0x0566	Alcor Micro
+vendor XYRATEX		0x0567	Xyratex
 vendor WACOM		0x056a	WACOM
 vendor ETEK		0x056c	e-TEK Labs
 vendor EIZO		0x056d	EIZO
 vendor ELECOM		0x056e	Elecom
-vendor XYRATEX		0x0572	Xyratex
+vendor CONEXANT		0x0572	Conexant
 vendor HAUPPAUGE	0x0573	Hauppauge Computer Works
 vendor BAFO		0x0576	BAFO/Quality Computer Accessories
 vendor YEDATA		0x057b	Y-E Data

>Release-Note:

>Audit-Trail:
From: David Holland <dholland-bugs@netbsd.org>
To: gnats-bugs@NetBSD.org
Cc: 
Subject: Re: kern/48533: USB vendor ID 0x0572 is for Conexant, not for Xyratex
Date: Sat, 26 Apr 2014 04:40:49 +0000

 On Mon, Jan 20, 2014 at 09:00:00AM +0000, ryoon@NetBSD.org wrote:
  > USB vendor ID 0x0572 is Conexant Systems, Inc. formerly Rockwell
  > Semiconductor Systems.
  > My conexant modem say so, and FreeBSD and Linux has such values.
  > 
  > See:
  > http://svnweb.freebsd.org/base/head/sys/dev/usb/usbdevs?revision=260219&view=markup
  > http://www.linux-usb.org/usb.ids
  > 	
  > >How-To-Repeat:
  > 	
  > >Fix:
  > [patch]

 Can you commit that?

 -- 
 David A. Holland
 dholland@netbsd.org

From: Ryo ONODERA <ryo_on@yk.rim.or.jp>
To: gnats-bugs@NetBSD.org
Cc: 
Subject: Re: kern/48533: USB vendor ID 0x0572 is for Conexant, not for
 Xyratex
Date: Sun, 27 Apr 2014 01:54:51 +0900 (JST)

 I will commit it.
 Thank you.

Responsible-Changed-From-To: kern-bug-people->ryoon
Responsible-Changed-By: ryoon@NetBSD.org
Responsible-Changed-When: Sun, 25 May 2014 05:08:30 +0000
Responsible-Changed-Why:
I will take this.


From: "Ryo ONODERA" <ryoon@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/48533 CVS commit: src/sys/dev/usb
Date: Sun, 25 May 2014 06:10:25 +0000

 Module Name:	src
 Committed By:	ryoon
 Date:		Sun May 25 06:10:25 UTC 2014

 Modified Files:
 	src/sys/dev/usb: usbdevs

 Log Message:
 PR kern/48533
 Fix USB vendor ID for Conexant.


 To generate a diff of this commit:
 cvs rdiff -u -r1.669 -r1.670 src/sys/dev/usb/usbdevs

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: ryoon@NetBSD.org
State-Changed-When: Sun, 25 May 2014 06:20:55 +0000
State-Changed-Why:
Committed.


From: "Ryo ONODERA" <ryoon@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/48533 CVS commit: src/sys/dev/usb
Date: Tue, 27 May 2014 13:41:02 +0000

 Module Name:	src
 Committed By:	ryoon
 Date:		Tue May 27 13:41:02 UTC 2014

 Modified Files:
 	src/sys/dev/usb: usbdevs

 Log Message:
 Related to PR kern/48533
 Prism GT is Conexant products.


 To generate a diff of this commit:
 cvs rdiff -u -r1.670 -r1.671 src/sys/dev/usb/usbdevs

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: "Ryo ONODERA" <ryoon@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/48533 CVS commit: src/sys/dev/usb
Date: Tue, 27 May 2014 13:44:25 +0000

 Module Name:	src
 Committed By:	ryoon
 Date:		Tue May 27 13:44:25 UTC 2014

 Modified Files:
 	src/sys/dev/usb: if_upgt.c

 Log Message:
 Related to PR kern/48533
 Prism GT 1/2 is Conexant products.
 Noted by skrll@, thank you.


 To generate a diff of this commit:
 cvs rdiff -u -r1.11 -r1.12 src/sys/dev/usb/if_upgt.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.