Related to PR kern/48533 Prism GT 1/2 is Conexant products. Noted by skrll@, thank you.